test/good/automatic/extension/array/without_input/ret_zero/0006.lat
int main() {
    string[] a = new string[3];
    a[0] = "klapek";
    a[1] = " luzno";
    a[2] = " szura";
    string accumulator;
    for(string b : a) {
      accumulator = accumulator + b;
    }

    printString(accumulator);

    return 0;
}
