test/bad/automatic/base/compile_time/0014.lat
int readInt() {
  return 2;
}

int main() {
      string x ;
      x = "pi" + 1 ;
      return 0 ;
}
